// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`corpus snapshots > java-spring-maven (en) 1`] = `
{
  ".claude/commands/java-refactor.generated.md": "# Refactor (Java)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".claude/commands/java-review.generated.md": "# Code Review (Java)

Review the current diff against this repository's Java conventions (spring). Run \`./mvnw -B verify\` before approving the review. CI also runs \`./gradlew build\`. Pay special attention to transaction boundaries (@Transactional), dependency injection and the controller/service/repository separation. Also look for bugs: null-safety. Tests live under \`src/test/\`, \`src/test/java/\`. Report only concrete findings with file and line references.
",
  ".claude/commands/java-testing.generated.md": "# Testing (Java)

Write tests with junit for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`./mvnw -B verify\` before finishing. Place new tests under \`src/test/\`, \`src/test/java/\`.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

## Java (java)

Java project using spring (maven wrapper).

### Conventions
- Follow standard Java naming conventions (PascalCase for classes, camelCase for methods).
- Run the tests with ./mvnw -B verify before finishing a task.
- Do not add new dependencies without declaring them in the existing build tool.

### Architecture
- Respect the layered separation (controller/service/repository) if the project already uses it.
- Prefer dependency injection over manual instantiation when the framework already provides it.

## Canonical commands

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## What CI runs (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)",
  ".github/prompts/java-refactor.generated.prompt.md": "# Refactor (Java)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".github/prompts/java-review.generated.prompt.md": "# Code Review (Java)

Review the current diff against this repository's Java conventions (spring). Run \`./mvnw -B verify\` before approving the review. CI also runs \`./gradlew build\`. Pay special attention to transaction boundaries (@Transactional), dependency injection and the controller/service/repository separation. Also look for bugs: null-safety. Tests live under \`src/test/\`, \`src/test/java/\`. Report only concrete findings with file and line references.
",
  ".github/prompts/java-testing.generated.prompt.md": "# Testing (Java)

Write tests with junit for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`./mvnw -B verify\` before finishing. Place new tests under \`src/test/\`, \`src/test/java/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

## Java (java)

Java project using spring (maven wrapper).

### Conventions
- Follow standard Java naming conventions (PascalCase for classes, camelCase for methods).
- Run the tests with ./mvnw -B verify before finishing a task.
- Do not add new dependencies without declaring them in the existing build tool.

### Architecture
- Respect the layered separation (controller/service/repository) if the project already uses it.
- Prefer dependency injection over manual instantiation when the framework already provides it.

## Canonical commands

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## What CI runs (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## Java (java)

Java project using spring (maven wrapper).

### Conventions
- Follow standard Java naming conventions (PascalCase for classes, camelCase for methods).
- Run the tests with ./mvnw -B verify before finishing a task.
- Do not add new dependencies without declaring them in the existing build tool.

### Architecture
- Respect the layered separation (controller/service/repository) if the project already uses it.
- Prefer dependency injection over manual instantiation when the framework already provides it.

## Canonical commands

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## What CI runs (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)",
}
`;

exports[`corpus snapshots > java-spring-maven (es) 1`] = `
{
  ".claude/commands/java-refactor.generated.md": "# Refactor (Java)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".claude/commands/java-review.generated.md": "# Code Review (Java)

Revisa el diff actual contra las convenciones Java de este repositorio (spring). Ejecuta \`./mvnw -B verify\` antes de dar por buena la revisión. CI también ejecuta \`./gradlew build\`. Presta especial atención a los límites de transacción (@Transactional), la inyección de dependencias y la separación controller/service/repository. Busca también bugs: null-safety. Los tests viven en \`src/test/\`, \`src/test/java/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/java-testing.generated.md": "# Testing (Java)

Escribe tests con junit para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`./mvnw -B verify\` antes de terminar. Coloca los tests nuevos en \`src/test/\`, \`src/test/java/\`.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

## Java (java)

Proyecto Java con spring (maven wrapper).

### Convenciones
- Sigue las convenciones de nombrado estándar de Java (PascalCase para clases, camelCase para métodos).
- Ejecuta los tests con ./mvnw -B verify antes de terminar una tarea.
- No añadas dependencias nuevas sin declararlas en el gestor de build existente.

### Arquitectura
- Respeta la separación en capas (controller/service/repository) si el proyecto ya la usa.
- Prefiere inyección de dependencias sobre instanciación manual cuando el framework ya la ofrezca.

## Comandos canónicos

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## Lo que ejecuta CI (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)",
  ".github/prompts/java-refactor.generated.prompt.md": "# Refactor (Java)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".github/prompts/java-review.generated.prompt.md": "# Code Review (Java)

Revisa el diff actual contra las convenciones Java de este repositorio (spring). Ejecuta \`./mvnw -B verify\` antes de dar por buena la revisión. CI también ejecuta \`./gradlew build\`. Presta especial atención a los límites de transacción (@Transactional), la inyección de dependencias y la separación controller/service/repository. Busca también bugs: null-safety. Los tests viven en \`src/test/\`, \`src/test/java/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/java-testing.generated.prompt.md": "# Testing (Java)

Escribe tests con junit para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`./mvnw -B verify\` antes de terminar. Coloca los tests nuevos en \`src/test/\`, \`src/test/java/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## Java (java)

Proyecto Java con spring (maven wrapper).

### Convenciones
- Sigue las convenciones de nombrado estándar de Java (PascalCase para clases, camelCase para métodos).
- Ejecuta los tests con ./mvnw -B verify antes de terminar una tarea.
- No añadas dependencias nuevas sin declararlas en el gestor de build existente.

### Arquitectura
- Respeta la separación en capas (controller/service/repository) si el proyecto ya la usa.
- Prefiere inyección de dependencias sobre instanciación manual cuando el framework ya la ofrezca.

## Comandos canónicos

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## Lo que ejecuta CI (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## Java (java)

Proyecto Java con spring (maven wrapper).

### Convenciones
- Sigue las convenciones de nombrado estándar de Java (PascalCase para clases, camelCase para métodos).
- Ejecuta los tests con ./mvnw -B verify antes de terminar una tarea.
- No añadas dependencias nuevas sin declararlas en el gestor de build existente.

### Arquitectura
- Respeta la separación en capas (controller/service/repository) si el proyecto ya la usa.
- Prefiere inyección de dependencias sobre instanciación manual cuando el framework ya la ofrezca.

## Comandos canónicos

- test: \`./mvnw -B verify\` (ci: build.yml)
- build: \`./gradlew build\` (ci: build.yml)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`src/test/\` — tests
- \`src/test/java/\` — tests

## Lo que ejecuta CI (GitHub Actions)

- \`./mvnw -B verify\` (build.yml)
- \`./gradlew build\` (build.yml)",
}
`;

exports[`corpus snapshots > monorepo-js-python (en) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

Review the current diff against this repository's CommonJS conventions (vue). Also look for bugs: async/await race conditions. Report only concrete findings with file and line references.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

Write tests with jest for the highlighted code. Cover the happy path and at least one edge case.
",
  ".claude/commands/python-refactor.generated.md": "# Refactor (Python)

Propose refactors that reduce duplication and improve readability without changing observable behavior. Respect the existing type hints.
",
  ".claude/commands/python-review.generated.md": "# Code Review (Python)

Review the current diff against this repository's Python conventions (fastapi). Pay special attention to Pydantic models, async dependencies and declared response codes. Also look for bugs: incorrect exception handling. Report only concrete findings with file and line references.
",
  ".claude/commands/python-testing.generated.md": "# Testing (Python)

Write tests with pytest for the highlighted code. Cover the happy path and at least one edge case.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using vue.

### Conventions
- Run the tests with jest before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.

## Python (python)

Python project using fastapi.

### Conventions
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

### Architecture
- Keep business logic separate from the framework layer when the project already follows that pattern.
- Use virtual environments; never install packages globally.

## Structure

- \`backend/\`",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

Review the current diff against this repository's CommonJS conventions (vue). Also look for bugs: async/await race conditions. Report only concrete findings with file and line references.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

Write tests with jest for the highlighted code. Cover the happy path and at least one edge case.
",
  ".github/prompts/python-refactor.generated.prompt.md": "# Refactor (Python)

Propose refactors that reduce duplication and improve readability without changing observable behavior. Respect the existing type hints.
",
  ".github/prompts/python-review.generated.prompt.md": "# Code Review (Python)

Review the current diff against this repository's Python conventions (fastapi). Pay special attention to Pydantic models, async dependencies and declared response codes. Also look for bugs: incorrect exception handling. Report only concrete findings with file and line references.
",
  ".github/prompts/python-testing.generated.prompt.md": "# Testing (Python)

Write tests with pytest for the highlighted code. Cover the happy path and at least one edge case.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using vue.

### Conventions
- Run the tests with jest before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.

## Python (python)

Python project using fastapi.

### Conventions
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

### Architecture
- Keep business logic separate from the framework layer when the project already follows that pattern.
- Use virtual environments; never install packages globally.

## Structure

- \`backend/\`",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using vue.

### Conventions
- Run the tests with jest before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.

## Python (python)

Python project using fastapi.

### Conventions
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

### Architecture
- Keep business logic separate from the framework layer when the project already follows that pattern.
- Use virtual environments; never install packages globally.

## Structure

- \`backend/\`",
}
`;

exports[`corpus snapshots > monorepo-js-python (es) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (vue). Busca también bugs: condiciones de carrera en async/await. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

Escribe tests con jest para el código señalado. Cubre el camino feliz y al menos un caso límite.
",
  ".claude/commands/python-refactor.generated.md": "# Refactor (Python)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable. Respeta los type hints existentes.
",
  ".claude/commands/python-review.generated.md": "# Code Review (Python)

Revisa el diff actual contra las convenciones Python de este repositorio (fastapi). Presta especial atención a los modelos Pydantic, las dependencias async y los códigos de respuesta declarados. Busca también bugs: manejo de excepciones incorrecto. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/python-testing.generated.md": "# Testing (Python)

Escribe tests con pytest para el código señalado. Cubre el camino feliz y al menos un caso límite.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con vue.

### Convenciones
- Ejecuta los tests con jest antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.

## Python (python)

Proyecto Python con fastapi.

### Convenciones
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

### Arquitectura
- Mantén la lógica de negocio separada de la capa de framework cuando el proyecto ya siga ese patrón.
- Usa entornos virtuales; no instales paquetes globalmente.

## Estructura

- \`backend/\`",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (vue). Busca también bugs: condiciones de carrera en async/await. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

Escribe tests con jest para el código señalado. Cubre el camino feliz y al menos un caso límite.
",
  ".github/prompts/python-refactor.generated.prompt.md": "# Refactor (Python)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable. Respeta los type hints existentes.
",
  ".github/prompts/python-review.generated.prompt.md": "# Code Review (Python)

Revisa el diff actual contra las convenciones Python de este repositorio (fastapi). Presta especial atención a los modelos Pydantic, las dependencias async y los códigos de respuesta declarados. Busca también bugs: manejo de excepciones incorrecto. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/python-testing.generated.prompt.md": "# Testing (Python)

Escribe tests con pytest para el código señalado. Cubre el camino feliz y al menos un caso límite.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con vue.

### Convenciones
- Ejecuta los tests con jest antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.

## Python (python)

Proyecto Python con fastapi.

### Convenciones
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

### Arquitectura
- Mantén la lógica de negocio separada de la capa de framework cuando el proyecto ya siga ese patrón.
- Usa entornos virtuales; no instales paquetes globalmente.

## Estructura

- \`backend/\`",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con vue.

### Convenciones
- Ejecuta los tests con jest antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.

## Python (python)

Proyecto Python con fastapi.

### Convenciones
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

### Arquitectura
- Mantén la lógica de negocio separada de la capa de framework cuando el proyecto ya siga ese patrón.
- Usa entornos virtuales; no instales paquetes globalmente.

## Estructura

- \`backend/\`",
}
`;

exports[`corpus snapshots > node-express-mocha (en) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

Review the current diff against this repository's CommonJS conventions (express). Run \`npm test\` and \`npm run lint\` before approving the review. Pay special attention to middleware control flow, error propagation through \`next(err)\` and response lifecycle handling. Also look for bugs: async/await race conditions. Tests live under \`test/\`, \`test/acceptance/\`. Report only concrete findings with file and line references.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

Write tests with mocha for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`npm test\` before finishing. Place new tests under \`test/\`, \`test/acceptance/\`.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using express.

### Conventions
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.

## Canonical commands

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Repo commands

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`lib/\` — source code
- \`test/\` — tests
- \`test/acceptance/\` — tests
- entry point: \`lib/app.js\` (package.json "main")

## What CI runs (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

Review the current diff against this repository's CommonJS conventions (express). Run \`npm test\` and \`npm run lint\` before approving the review. Pay special attention to middleware control flow, error propagation through \`next(err)\` and response lifecycle handling. Also look for bugs: async/await race conditions. Tests live under \`test/\`, \`test/acceptance/\`. Report only concrete findings with file and line references.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

Write tests with mocha for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`npm test\` before finishing. Place new tests under \`test/\`, \`test/acceptance/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using express.

### Conventions
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.

## Canonical commands

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Repo commands

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`lib/\` — source code
- \`test/\` — tests
- \`test/acceptance/\` — tests
- entry point: \`lib/app.js\` (package.json "main")

## What CI runs (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using express.

### Conventions
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.

## Canonical commands

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Repo commands

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`lib/\` — source code
- \`test/\` — tests
- \`test/acceptance/\` — tests
- entry point: \`lib/app.js\` (package.json "main")

## What CI runs (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)",
}
`;

exports[`corpus snapshots > node-express-mocha (es) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (express). Ejecuta \`npm test\` y \`npm run lint\` antes de dar por buena la revisión. Presta especial atención al flujo de middleware, la propagación de errores con \`next(err)\` y el ciclo de vida de la respuesta. Busca también bugs: condiciones de carrera en async/await. Los tests viven en \`test/\`, \`test/acceptance/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

Escribe tests con mocha para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`npm test\` antes de terminar. Coloca los tests nuevos en \`test/\`, \`test/acceptance/\`.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con express.

### Convenciones
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.

## Comandos canónicos

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Comandos del repo

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`lib/\` — código fuente
- \`test/\` — tests
- \`test/acceptance/\` — tests
- punto de entrada: \`lib/app.js\` (package.json "main")

## Lo que ejecuta CI (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (express). Ejecuta \`npm test\` y \`npm run lint\` antes de dar por buena la revisión. Presta especial atención al flujo de middleware, la propagación de errores con \`next(err)\` y el ciclo de vida de la respuesta. Busca también bugs: condiciones de carrera en async/await. Los tests viven en \`test/\`, \`test/acceptance/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

Escribe tests con mocha para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`npm test\` antes de terminar. Coloca los tests nuevos en \`test/\`, \`test/acceptance/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con express.

### Convenciones
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.

## Comandos canónicos

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Comandos del repo

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`lib/\` — código fuente
- \`test/\` — tests
- \`test/acceptance/\` — tests
- punto de entrada: \`lib/app.js\` (package.json "main")

## Lo que ejecuta CI (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con express.

### Convenciones
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.

## Comandos canónicos

- test: \`npm test\` (package.json)
- lint: \`npm run lint\` (package.json)

## Comandos del repo

- \`npm test\` → \`mocha --recursive test/\` (package.json)
- \`npm run lint\` → \`eslint lib/ test/\` (package.json)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`lib/\` — código fuente
- \`test/\` — tests
- \`test/acceptance/\` — tests
- punto de entrada: \`lib/app.js\` (package.json "main")

## Lo que ejecuta CI (GitHub Actions)

- \`npm ci\` (ci.yml)
- \`npm test\` (ci.yml)
- \`npm run lint\` (ci.yml)",
}
`;

exports[`corpus snapshots > node-plain (en) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

Review the current diff against this repository's CommonJS conventions. Also look for bugs: async/await race conditions. Report only concrete findings with file and line references.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

Write tests for the highlighted code. Cover the happy path and at least one edge case.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project.

### Conventions
- Run the repository's test suite before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

Review the current diff against this repository's CommonJS conventions. Also look for bugs: async/await race conditions. Report only concrete findings with file and line references.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

Write tests for the highlighted code. Cover the happy path and at least one edge case.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project.

### Conventions
- Run the repository's test suite before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project.

### Conventions
- Run the repository's test suite before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.",
}
`;

exports[`corpus snapshots > node-plain (es) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

Revisa el diff actual contra las convenciones CommonJS de este repositorio. Busca también bugs: condiciones de carrera en async/await. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

Escribe tests para el código señalado. Cubre el camino feliz y al menos un caso límite.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript.

### Convenciones
- Ejecuta la suite de tests del repositorio antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

Revisa el diff actual contra las convenciones CommonJS de este repositorio. Busca también bugs: condiciones de carrera en async/await. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

Escribe tests para el código señalado. Cubre el camino feliz y al menos un caso límite.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript.

### Convenciones
- Ejecuta la suite de tests del repositorio antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript.

### Convenciones
- Ejecuta la suite de tests del repositorio antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.",
}
`;

exports[`corpus snapshots > node-react-vitest (en) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

Review the current diff against this repository's CommonJS conventions (react). Run \`npm test\` before approving the review. Pay special attention to hook dependencies (\`useEffect\`), unnecessary re-renders and derived state. Also look for bugs: async/await race conditions. Report only concrete findings with file and line references.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

Write tests with vitest for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`npm test\` before finishing.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using react.

### Conventions
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.

## Canonical commands

- test: \`npm test\` (package.json)

## Repo commands

- \`npm test\` → \`vitest run\` (package.json)",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

Propose refactors that reduce duplication and improve readability without changing observable behavior.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

Review the current diff against this repository's CommonJS conventions (react). Run \`npm test\` before approving the review. Pay special attention to hook dependencies (\`useEffect\`), unnecessary re-renders and derived state. Also look for bugs: async/await race conditions. Report only concrete findings with file and line references.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

Write tests with vitest for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`npm test\` before finishing.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using react.

### Conventions
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.

## Canonical commands

- test: \`npm test\` (package.json)

## Repo commands

- \`npm test\` → \`vitest run\` (package.json)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## JavaScript (js-ts)

JavaScript project using react.

### Conventions
- Run the tests with npm test before finishing a task.
- Follow the existing CommonJS style (require()/module.exports); do not mix in import/export.

### Architecture
- Keep components/modules small and single-purpose.
- Place tests next to the code they cover or in a mirrored \`test/\` directory, following what the repo already uses.

## Canonical commands

- test: \`npm test\` (package.json)

## Repo commands

- \`npm test\` → \`vitest run\` (package.json)",
}
`;

exports[`corpus snapshots > node-react-vitest (es) 1`] = `
{
  ".claude/commands/js-ts-refactor.generated.md": "# Refactor (JS/TS)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".claude/commands/js-ts-review.generated.md": "# Code Review (JS/TS)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (react). Ejecuta \`npm test\` antes de dar por buena la revisión. Presta especial atención a las dependencias de hooks (\`useEffect\`), renders innecesarios y estado derivado. Busca también bugs: condiciones de carrera en async/await. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/js-ts-testing.generated.md": "# Testing (JS/TS)

Escribe tests con vitest para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`npm test\` antes de terminar.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con react.

### Convenciones
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.

## Comandos canónicos

- test: \`npm test\` (package.json)

## Comandos del repo

- \`npm test\` → \`vitest run\` (package.json)",
  ".github/prompts/js-ts-refactor.generated.prompt.md": "# Refactor (JS/TS)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable.
",
  ".github/prompts/js-ts-review.generated.prompt.md": "# Code Review (JS/TS)

Revisa el diff actual contra las convenciones CommonJS de este repositorio (react). Ejecuta \`npm test\` antes de dar por buena la revisión. Presta especial atención a las dependencias de hooks (\`useEffect\`), renders innecesarios y estado derivado. Busca también bugs: condiciones de carrera en async/await. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/js-ts-testing.generated.prompt.md": "# Testing (JS/TS)

Escribe tests con vitest para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`npm test\` antes de terminar.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con react.

### Convenciones
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.

## Comandos canónicos

- test: \`npm test\` (package.json)

## Comandos del repo

- \`npm test\` → \`vitest run\` (package.json)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## JavaScript (js-ts)

Proyecto JavaScript con react.

### Convenciones
- Ejecuta los tests con npm test antes de terminar una tarea.
- Sigue el estilo CommonJS existente (require()/module.exports), no mezcles con import/export.

### Arquitectura
- Mantén los componentes/módulos pequeños y con una responsabilidad clara.
- Coloca los tests junto al código que prueban o en un directorio \`test/\` espejo, según lo que ya use el repo.

## Comandos canónicos

- test: \`npm test\` (package.json)

## Comandos del repo

- \`npm test\` → \`vitest run\` (package.json)",
}
`;

exports[`corpus snapshots > python-fastapi (en) 1`] = `
{
  ".claude/commands/python-refactor.generated.md": "# Refactor (Python)

Propose refactors that reduce duplication and improve readability without changing observable behavior. Respect the existing type hints.
",
  ".claude/commands/python-review.generated.md": "# Code Review (Python)

Review the current diff against this repository's Python conventions (fastapi). Pay special attention to Pydantic models, async dependencies and declared response codes. Also look for bugs: incorrect exception handling. Report only concrete findings with file and line references.
",
  ".claude/commands/python-testing.generated.md": "# Testing (Python)

Write tests with pytest for the highlighted code. Cover the happy path and at least one edge case.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

## Python (python)

Python project using fastapi.

### Conventions
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

### Architecture
- Keep business logic separate from the framework layer when the project already follows that pattern.
- Use virtual environments; never install packages globally.",
  ".github/prompts/python-refactor.generated.prompt.md": "# Refactor (Python)

Propose refactors that reduce duplication and improve readability without changing observable behavior. Respect the existing type hints.
",
  ".github/prompts/python-review.generated.prompt.md": "# Code Review (Python)

Review the current diff against this repository's Python conventions (fastapi). Pay special attention to Pydantic models, async dependencies and declared response codes. Also look for bugs: incorrect exception handling. Report only concrete findings with file and line references.
",
  ".github/prompts/python-testing.generated.prompt.md": "# Testing (Python)

Write tests with pytest for the highlighted code. Cover the happy path and at least one edge case.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

## Python (python)

Python project using fastapi.

### Conventions
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

### Architecture
- Keep business logic separate from the framework layer when the project already follows that pattern.
- Use virtual environments; never install packages globally.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## Python (python)

Python project using fastapi.

### Conventions
- Follow PEP 8; use type hints on public functions.
- Run the tests with pytest before finishing a task.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

### Architecture
- Keep business logic separate from the framework layer when the project already follows that pattern.
- Use virtual environments; never install packages globally.",
}
`;

exports[`corpus snapshots > python-fastapi (es) 1`] = `
{
  ".claude/commands/python-refactor.generated.md": "# Refactor (Python)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable. Respeta los type hints existentes.
",
  ".claude/commands/python-review.generated.md": "# Code Review (Python)

Revisa el diff actual contra las convenciones Python de este repositorio (fastapi). Presta especial atención a los modelos Pydantic, las dependencias async y los códigos de respuesta declarados. Busca también bugs: manejo de excepciones incorrecto. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/python-testing.generated.md": "# Testing (Python)

Escribe tests con pytest para el código señalado. Cubre el camino feliz y al menos un caso límite.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

## Python (python)

Proyecto Python con fastapi.

### Convenciones
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

### Arquitectura
- Mantén la lógica de negocio separada de la capa de framework cuando el proyecto ya siga ese patrón.
- Usa entornos virtuales; no instales paquetes globalmente.",
  ".github/prompts/python-refactor.generated.prompt.md": "# Refactor (Python)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable. Respeta los type hints existentes.
",
  ".github/prompts/python-review.generated.prompt.md": "# Code Review (Python)

Revisa el diff actual contra las convenciones Python de este repositorio (fastapi). Presta especial atención a los modelos Pydantic, las dependencias async y los códigos de respuesta declarados. Busca también bugs: manejo de excepciones incorrecto. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/python-testing.generated.prompt.md": "# Testing (Python)

Escribe tests con pytest para el código señalado. Cubre el camino feliz y al menos un caso límite.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## Python (python)

Proyecto Python con fastapi.

### Convenciones
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

### Arquitectura
- Mantén la lógica de negocio separada de la capa de framework cuando el proyecto ya siga ese patrón.
- Usa entornos virtuales; no instales paquetes globalmente.",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## Python (python)

Proyecto Python con fastapi.

### Convenciones
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con pytest antes de terminar una tarea.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

### Arquitectura
- Mantén la lógica de negocio separada de la capa de framework cuando el proyecto ya siga ese patrón.
- Usa entornos virtuales; no instales paquetes globalmente.",
}
`;

exports[`corpus snapshots > python-uv-tox (en) 1`] = `
{
  ".claude/commands/python-refactor.generated.md": "# Refactor (Python)

Propose refactors that reduce duplication and improve readability without changing observable behavior. Respect the existing type hints.
",
  ".claude/commands/python-review.generated.md": "# Code Review (Python)

Review the current diff against this repository's Python conventions (flask). Run \`uv run pytest\` before approving the review. The full environment matrix runs through tox (\`tox.ini\`). Pay special attention to application/request context, blueprints and HTTP error handling. Also look for bugs: incorrect exception handling. Tests live under \`tests/\`. Report only concrete findings with file and line references.
",
  ".claude/commands/python-testing.generated.md": "# Testing (Python)

Write tests with pytest for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`uv run pytest\` before finishing. Place new tests under \`tests/\`.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generated by agent-rules-init from what was detected in this repo.

## Python (python)

Python project using flask.

### Conventions
- Follow PEP 8; use type hints on public functions.
- Run the tests with uv run pytest before finishing a task.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

### Architecture
- Keep business logic separate from the framework layer when the project already follows that pattern.
- Use virtual environments; never install packages globally.

## Canonical commands

- test: \`uv run pytest\` (ci: tests.yml)

## Repo commands

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`tests/\` — tests
- entry point: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## What CI runs (GitHub Actions)

- \`uv run pytest\` (tests.yml)",
  ".github/prompts/python-refactor.generated.prompt.md": "# Refactor (Python)

Propose refactors that reduce duplication and improve readability without changing observable behavior. Respect the existing type hints.
",
  ".github/prompts/python-review.generated.prompt.md": "# Code Review (Python)

Review the current diff against this repository's Python conventions (flask). Run \`uv run pytest\` before approving the review. The full environment matrix runs through tox (\`tox.ini\`). Pay special attention to application/request context, blueprints and HTTP error handling. Also look for bugs: incorrect exception handling. Tests live under \`tests/\`. Report only concrete findings with file and line references.
",
  ".github/prompts/python-testing.generated.prompt.md": "# Testing (Python)

Write tests with pytest for the highlighted code. Cover the happy path and at least one edge case. Verify the suite with \`uv run pytest\` before finishing. Place new tests under \`tests/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generated by agent-rules-init from what was detected in this repo.

## Python (python)

Python project using flask.

### Conventions
- Follow PEP 8; use type hints on public functions.
- Run the tests with uv run pytest before finishing a task.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

### Architecture
- Keep business logic separate from the framework layer when the project already follows that pattern.
- Use virtual environments; never install packages globally.

## Canonical commands

- test: \`uv run pytest\` (ci: tests.yml)

## Repo commands

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`tests/\` — tests
- entry point: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## What CI runs (GitHub Actions)

- \`uv run pytest\` (tests.yml)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generated by agent-rules-init from what was detected in this repo.

## Python (python)

Python project using flask.

### Conventions
- Follow PEP 8; use type hints on public functions.
- Run the tests with uv run pytest before finishing a task.
- Do not introduce new dependencies without adding them to the existing dependency manifest.

### Architecture
- Keep business logic separate from the framework layer when the project already follows that pattern.
- Use virtual environments; never install packages globally.

## Canonical commands

- test: \`uv run pytest\` (ci: tests.yml)

## Repo commands

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Structure

- \`.github/\` — GitHub workflows and configuration
- \`src/\` — source code
- \`tests/\` — tests
- entry point: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## What CI runs (GitHub Actions)

- \`uv run pytest\` (tests.yml)",
}
`;

exports[`corpus snapshots > python-uv-tox (es) 1`] = `
{
  ".claude/commands/python-refactor.generated.md": "# Refactor (Python)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable. Respeta los type hints existentes.
",
  ".claude/commands/python-review.generated.md": "# Code Review (Python)

Revisa el diff actual contra las convenciones Python de este repositorio (flask). Ejecuta \`uv run pytest\` antes de dar por buena la revisión. La matriz completa de entornos se ejecuta con tox (\`tox.ini\`). Presta especial atención al contexto de aplicación/petición, los blueprints y el manejo de errores HTTP. Busca también bugs: manejo de excepciones incorrecto. Los tests viven en \`tests/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".claude/commands/python-testing.generated.md": "# Testing (Python)

Escribe tests con pytest para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`uv run pytest\` antes de terminar. Coloca los tests nuevos en \`tests/\`.
",
  ".github/copilot-instructions.generated.md": "# Copilot Instructions

Generado por agent-rules-init a partir de lo detectado en este repo.

## Python (python)

Proyecto Python con flask.

### Convenciones
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con uv run pytest antes de terminar una tarea.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

### Arquitectura
- Mantén la lógica de negocio separada de la capa de framework cuando el proyecto ya siga ese patrón.
- Usa entornos virtuales; no instales paquetes globalmente.

## Comandos canónicos

- test: \`uv run pytest\` (ci: tests.yml)

## Comandos del repo

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`tests/\` — tests
- punto de entrada: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## Lo que ejecuta CI (GitHub Actions)

- \`uv run pytest\` (tests.yml)",
  ".github/prompts/python-refactor.generated.prompt.md": "# Refactor (Python)

Propón refactors que reduzcan duplicación y mejoren la legibilidad sin cambiar comportamiento observable. Respeta los type hints existentes.
",
  ".github/prompts/python-review.generated.prompt.md": "# Code Review (Python)

Revisa el diff actual contra las convenciones Python de este repositorio (flask). Ejecuta \`uv run pytest\` antes de dar por buena la revisión. La matriz completa de entornos se ejecuta con tox (\`tox.ini\`). Presta especial atención al contexto de aplicación/petición, los blueprints y el manejo de errores HTTP. Busca también bugs: manejo de excepciones incorrecto. Los tests viven en \`tests/\`. Señala solo hallazgos concretos con archivo y línea.
",
  ".github/prompts/python-testing.generated.prompt.md": "# Testing (Python)

Escribe tests con pytest para el código señalado. Cubre el camino feliz y al menos un caso límite. Verifica la suite con \`uv run pytest\` antes de terminar. Coloca los tests nuevos en \`tests/\`.
",
  "AGENTS.generated.md": "# AGENTS.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## Python (python)

Proyecto Python con flask.

### Convenciones
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con uv run pytest antes de terminar una tarea.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

### Arquitectura
- Mantén la lógica de negocio separada de la capa de framework cuando el proyecto ya siga ese patrón.
- Usa entornos virtuales; no instales paquetes globalmente.

## Comandos canónicos

- test: \`uv run pytest\` (ci: tests.yml)

## Comandos del repo

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`tests/\` — tests
- punto de entrada: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## Lo que ejecuta CI (GitHub Actions)

- \`uv run pytest\` (tests.yml)",
  "CLAUDE.generated.md": "# CLAUDE.md

Generado por agent-rules-init a partir de lo detectado en este repo.

## Python (python)

Proyecto Python con flask.

### Convenciones
- Sigue PEP 8; usa type hints en funciones públicas.
- Ejecuta los tests con uv run pytest antes de terminar una tarea.
- No introduzcas dependencias nuevas sin añadirlas al manifiesto de dependencias existente.

### Arquitectura
- Mantén la lógica de negocio separada de la capa de framework cuando el proyecto ya siga ese patrón.
- Usa entornos virtuales; no instales paquetes globalmente.

## Comandos canónicos

- test: \`uv run pytest\` (ci: tests.yml)

## Comandos del repo

- \`tox -e py311\` (tox.ini)
- \`tox -e style\` (tox.ini)

## Estructura

- \`.github/\` — workflows y configuración de GitHub
- \`src/\` — código fuente
- \`tests/\` — tests
- punto de entrada: \`fixture_app.cli:main\` (pyproject.toml "fixture-app")

## Lo que ejecuta CI (GitHub Actions)

- \`uv run pytest\` (tests.yml)",
}
`;
